fix: retore type header i18n

--- a/public/locales/en/roomsTab.json
+++ b/public/locales/en/roomsTab.json
@@ -5,6 +5,7 @@
     "headers": {
         "name": "Name",
         "creator": "Creator",
+        "type": "Type",
         "memberCount": "Member count",
         "status": "Status"
     },
