--- a/public/locales/en/usersTab.json
+++ b/public/locales/en/usersTab.json
@@ -28,7 +28,7 @@
         "title": "Account status",
         "content": {
             "active": "<strong>Active</strong>: the user can log in to Watcha.",
-            "inactive": "<strong>Inactive</strong>: the user cannot log in to Watcha. A deactivated user can be reactivated (an email will be sent asking them to set a new password).",
+            "inactive": "<strong>Inactive</strong>: the user cannot log in to Watcha. A deactivated user can be reactivated; an email will be sent asking them to set a new password if so.",
             "invited": "<strong>Invitation sent</strong>: an invitation email has been sent to the user, but the user has not yet finalized the registration process, and has not yet logged in to Watcha."
         }
     },
