--- a/public/locales/fr/usersTab.json
+++ b/public/locales/fr/usersTab.json
@@ -22,7 +22,15 @@
         "emailAddress": "Adresse électronique",
         "lastSeen": "Dernière activité le",
         "role": "Rôle",
-        "status": "Statut du compte"
+        "status": "Statut"
+    },
+    "statusHelp": {
+        "title": "Statut du compte",
+        "content": {
+            "active": "<strong>Activé</strong> : l'utilisateur peut se connecter à Watcha.",
+            "inactive": "<strong>Désactivé</strong> : l'utilisateur ne peut pas se connecter à Watcha. Un utilisateur désactivé peut être réactivé ; un email lui demandant de définir un nouveau mot de passe lui sera envoyé.",
+            "invited": "<strong>Invitation envoyée</strong> : un email d'invitation a été envoyé à l'utilisateur, mais ce dernier n'a pas encore finalisé la procédure d'inscription, et ne s'est pas encore connecté à Watcha."
+        }
     },
     "roles": {
         "administrator": "Administrateur",
@@ -30,8 +38,8 @@
         "partner": "Partenaire"
     },
     "status": {
-        "active": "activé",
-        "inactive": "désactivé",
-        "invited": "invitation envoyée"
+        "active": "Compte activé",
+        "inactive": "Compte désactivé",
+        "invited": "Invitation envoyée"
     }
 }
