Watcha admin release sprint 20 (#18)
* feat: extract Login from App component

* refactor: remove obsolete package-lock.json since using yarn

* feat: use matrix-js-sdk for login

* feat: use URL() rather than string concatenation

* fix: remove useless t()

* feat: upgrade i18n engine

* feat: add an error boundary

* refactor: extensive but very safe cleaning of the code base

No purpose changes  :
- format with Prettier
- convert arrow methods with only an instruction into oneline
- convert the setStates having only one argument into oneline
- merge consecutive setStates
- reorganize imports
- improve react-bootstrap imports
- convert small components into stateless functional components
- isEmail() now returns only a boolean
- convert React life cycles (componentDidMount...) to standard methods, not to class properties
- remove useless constructors
- cleaning of line breaks...

* fix: replace obsolete prop for Alert components

* feat: use classnames() to improve BooleanRow component

* fix: upgrade dependencies

* fix: restore homepage in package.json and update i18n config

* feat: add context for matrix client

* feat: replace deactivateAccount() with client.deactivateSynapseUser()

* fix: add namespace array in i18n config

* fix: turn off debug for i18n

* fix: refresh the user table by validating user creation alert

* feat: use context wherever token and baseUrl are needed

* feat: add SuspenseFallback component

* feat: delay fallback suspense display

* cmd: yarn add react-table

* refactor: replace object[xxx] with object.xxx

* refactor: replace legacy functional components with arrow functions

* cmd: yarn add restful-react

* refactor: convert StatsTab into functional component

* refactor: convert CardStats into functional component

* feat: use restful-react for StatsTab component

* feat: replace custom loading animation with a spinner

* feat: replace App.css content with user.

--- a/public/locales/en/dashboardTab.json
+++ b/public/locales/en/dashboardTab.json
@@ -1,10 +1,36 @@
 {
     "title": "Dashboard",
-    "usersPannel": {
-        "footerLink": "Administrate users"
+    "usersPanel": {
+        "collaborators": "Collaborators",
+        "partners": "Partners",
+        "administrators": "Administrators",
+        "loggedUsers": "At least once",
+        "monthlyUsers": "During last month",
+        "weeklyUsers": "Duringlast week",
+        "pendingInvitationUsers": "Pending invitations",
+        "administrateButton": "Administrate users",
+        "usersPerRole": "Roles of users",
+        "connectedUsers": "Connected users",
+        "otherStatistics": "Other statistics",
+        "administratorTooltip": "Users with access to the administration console of this instance.",
+        "collaboratorTooltip": "Internal users with the right to create rooms and invite users into them.",
+        "partnerTooltip": "External users who have been invited to one or more rooms by an internal user and have limited rights.",
+        "pendingInvitationTooltip": "Users who have been invited, but have not yet set their password or logged in."
     },
-    "roomsPannel": {
-        "footerLink": "Administrate rooms",
-        "noRoomsMessage": "This Watcha instance does not yet have some rooms. Return to Watcha to create a first room (button \"+\")."
+    "roomsPanel": {
+        "title": "Rooms per type",
+        "nonDirectRoomsCount": "Multiple conversations of which active",
+        "directRoomsCount": "Personnals conversations of which active",
+        "administrateButton": "Administrate rooms",
+        "noRoomsMessageOne": "This Watcha instance does not yet have some rooms.",
+        "noRoomsMessageTwo": "Return to Watcha to create a first room (button \"+\")."
+    },
+    "serverStatePannel": {
+        "title": "Server state",
+        "generaleInformation": "General information",
+        "version": "Version",
+        "installDate": "Installed on",
+        "upgradeDate": "Upgrade on",
+        "diskUsage": "Disk space used"
     }
 }
