--- a/public/locales/en/roomsTab.json
+++ b/public/locales/en/roomsTab.json
@@ -5,7 +5,7 @@
     "headers": {
         "name": "Name",
         "creator": "Creator",
-        "n": "Member count",
+        "memberCount": "Member count",
         "type": "Type",
         "status": "Status"
     },
