Revert "Watcha op332 add a modal dialog for room creation (require matrix-react-sdk/pull/96) (#29)"
This reverts commit 067accd8fb061df54d728a12b5b2e7c60c611fff.

--- a/public/locales/en/roomsTab.json
+++ b/public/locales/en/roomsTab.json
@@ -5,7 +5,7 @@
     "headers": {
         "name": "Name",
         "creator": "Creator",
-        "memberCount": "Member count",
+        "n": "Member count",
         "type": "Type",
         "status": "Status"
     },
