style: addition of 'new' traduction in roomsTab namespace

--- a/public/locales/en/roomsTab.json
+++ b/public/locales/en/roomsTab.json
@@ -11,6 +11,7 @@
     },
     "status": {
         "active": "enabled",
-        "inactive": "disabled"
+        "inactive": "disabled",
+        "new": "new"
     }
 }
