--- a/public/locales/fr/roomsTab.json
+++ b/public/locales/fr/roomsTab.json
@@ -11,6 +11,7 @@
     },
     "status": {
         "active": "activé",
-        "inactive": "désactivé"
+        "inactive": "désactivé",
+        "new": "nouveau"
     }
 }
