--- a/public/locales/en/dashboardTab.json
+++ b/public/locales/en/dashboardTab.json
@@ -1,32 +1,25 @@
 {
     "title": "Dashboard",
     "usersPanel": {
-        "collaborators": "Collaborators",
-        "partners": "Partners",
-        "administrators": "Administrators",
+        "title": "Users",
         "loggedUsers": "At least once",
         "monthlyUsers": "During last month",
         "weeklyUsers": "Duringlast week",
         "pendingInvitationUsers": "Pending invitations",
         "administrateButton": "Administrate users",
-        "usersPerRole": "Roles of users",
+        "usersPerRole": "Distribution of users",
         "connectedUsers": "Connected users",
-        "otherStatistics": "Other statistics",
-        "administratorTooltip": "Users with access to the administration console of this instance.",
-        "collaboratorTooltip": "Internal users with the right to create rooms and invite users into them.",
-        "partnerTooltip": "External users who have been invited to one or more rooms by an internal user and have limited rights.",
-        "pendingInvitationTooltip": "Users who have been invited, but have not yet set their password or logged in."
+        "otherStatistics": "Other statistics"
     },
     "roomsPanel": {
         "title": "Rooms per type",
-        "nonDirectRoomsCount": "Multiple conversations of which new or active",
-        "directRoomsCount": "Personnals conversations of which new or active",
+        "nonDirectRoomsCount": "New or active rooms",
+        "directRoomsCount": "New or active one-to-one conversations",
         "administrateButton": "Administrate rooms",
-        "noRoomsMessageOne": "This Watcha instance does not yet have some rooms.",
-        "noRoomsMessageTwo": "Return to Watcha to create a first room (button \"+\")."
+        "noRoomsMessage": "<strong>This Watcha instance does not have any rooms yet.<br/>Return to Watcha to create a first room (button \"+\").</strong>."
     },
-    "serverStatePannel": {
-        "title": "Server state",
+    "applicationPanel": {
+        "title": "Application",
         "generaleInformation": "General information",
         "version": "Version",
         "installDate": "Installed on",
