--- a/public/locales/fr/dashboardTab.json
+++ b/public/locales/fr/dashboardTab.json
@@ -1,32 +1,25 @@
 {
     "title": "Tableau de bord",
     "usersPanel": {
-        "collaborators": "Collaborateurs",
-        "partners": "Partenaires",
-        "administrators": "Administrateurs",
+        "title": "Utilisateurs",
         "loggedUsers": "Au moins une fois",
-        "monthlyUsers": "Sur le dernier mois",
-        "weeklyUsers": "Sur la dernière semaine",
+        "monthlyUsers": "Au cours du dernier mois",
+        "weeklyUsers": "Au cours de la dernière semaine",
         "pendingInvitationUsers": "Invitations en attente",
         "administrateButton": "Administrer les utilisateurs",
-        "usersPerRole": "Rôles des utilisateurs",
+        "usersPerRole": "Répartition des utilisateurs",
         "connectedUsers": "Utilisateurs connectés",
-        "otherStatistics": "Autres statistiques",
-        "administratorTooltip": "Utilisateurs ayant accès à la console d'administration de l'instance.",
-        "collaboratorTooltip": "Utilisateurs internes ayant le droit de créer des salons et d'inviter des utilisateurs dans ces derniers.",
-        "partnerTooltip": "Utilisateurs externes ayant été invités dans un ou plusieurs salons, par un utilisateur interne et ayant des droits limités.",
-        "pendingInvitationTooltip": "Utilisateurs ayant été invités, mais n'ayant pas encore défini leur mot de passe, ni s'étant encore connecté."
+        "otherStatistics": "Autres statistiques"
     },
     "roomsPanel": {
         "title": "Salons par type",
         "nonDirectRoomsCount": "Conversations a plusieurs nouvelles ou actives",
         "directRoomsCount": "Conversations privées nouvelles ou actives",
         "administrateButton": "Administrer les salons",
-        "noRoomsMessageOne": "Cette installation de Watcha n'a encore aucun salon.",
-        "noRoomsMessageTwo": "Retournez sur Watcha  pour creer un premier Salon (bouton \"+\")"
+        "noRoomsMessage": "<strong>Cette installation de Watcha n'a encore aucun salon.<br/>Retournez sur Watcha  pour creer un premier Salon (bouton \"+\").</strong>"
     },
-    "serverStatePannel": {
-        "title": "État du serveur",
+    "applicationPanel": {
+        "title": "Application",
         "generaleInformation": "Informations générales",
         "version": "Version",
         "installDate": "Installé le",
