refactor: code modification after review for better syntax.

--- a/public/locales/fr/common.json
+++ b/public/locales/fr/common.json
@@ -36,9 +36,12 @@
     "help": "Aide",
     "filter": "Filtrer",
     "clear": "Effacer",
-    "collaborators": "Collaborateurs",
-    "partners": "Partenaires",
-    "administrators": "Administrateurs",
+    "collaborator": "Collaborateur",
+    "collaborator_plural": "Collaborateurs",
+    "partner": "Partenaire",
+    "partner_plural": "Partenaires",
+    "administrator": "Administrateur",
+    "administrator_plural": "Administrateurs",
     "tooltip":{
         "administrator": "Utilisateurs ayant accès à la console d'administration de l'instance.",
         "collaborator": "Utilisateurs internes ayant le droit de créer des salons et d'inviter des utilisateurs dans ces derniers.",
