all changes squashed in one from branch watcha-OP394-improvement-of-dashbordTab

--- a/public/locales/en/usersTab.json
+++ b/public/locales/en/usersTab.json
@@ -33,9 +33,9 @@
         }
     },
     "roles": {
-        "administrator": "Administrator",
         "collaborator": "Collaborator",
-        "partner": "Partner"
+        "partner": "Partner",
+        "administrator": "Administrator"
     },
     "status": {
         "active": "Account enabled",
