--- a/public/locales/en/common.json
+++ b/public/locales/en/common.json
@@ -15,14 +15,14 @@
     "cancel": "Cancel",
     "success": "Successfull transaction",
     "danger": "An error has occurred",
-    "expand": "expand",
-    "help": "help",
+    "expand": "Expand",
+    "help": "Help",
     "filter": "Filter",
     "clear": "Clear",
     "collaborators": "Collaborators",
     "partners": "Partners",
     "administrators": "Administrators",
-    "tooltip":{
+    "tooltip": {
         "administrator": "Users with access to the administration console of this instance.",
         "collaborator": "Internal users with the right to create rooms and invite users into them.",
         "partner": "External users who have been invited to one or more rooms by an internal user and have limited rights.",
