--- a/public/locales/fr/common.json
+++ b/public/locales/fr/common.json
@@ -32,14 +32,14 @@
     "close": "Fermer",
     "success": "Opération terminée avec succès",
     "danger": "Une erreur s'est produite",
-    "expand": "étendre",
+    "expand": "Étendre",
     "help": "Aide",
     "filter": "Filtrer",
     "clear": "Effacer",
     "collaborators": "Collaborateurs",
     "partners": "Partenaires",
     "administrators": "Administrateurs",
-    "tooltip":{
+    "tooltip": {
         "administrator": "Utilisateurs ayant accès à la console d'administration de l'instance.",
         "collaborator": "Utilisateurs internes ayant le droit de créer des salons et d'inviter des utilisateurs dans ces derniers.",
         "partner": "Utilisateurs externes ayant été invités dans un ou plusieurs salons, par un utilisateur interne et ayant des droits limités.",
