--- a/public/locales/en/common.json
+++ b/public/locales/en/common.json
@@ -23,9 +23,9 @@
     "partners": "Partners",
     "administrators": "Administrators",
     "tooltip": {
-        "administrator": "Users with access to the administration console of this instance.",
-        "collaborator": "Internal users with the right to create rooms and invite users into them.",
-        "partner": "External users who have been invited to one or more rooms by an internal user and have limited rights.",
-        "pendingInvitation": "Users who have been invited, but have not yet set their password or logged in."
+        "administrator": "Users with access to the administration console of this instance",
+        "collaborator": "Internal users with the right to create rooms and invite users into them",
+        "partner": "External users who have been invited to one or more rooms by an internal user and have limited rights",
+        "pendingInvitation": "Users who have been invited, but have not yet set their password or logged in"
     }
 }
