all changes after first review on PR#39

--- a/public/locales/en/dashboardTab.json
+++ b/public/locales/en/dashboardTab.json
@@ -1,5 +1,6 @@
 {
     "title": "Dashboard",
+    "expand": "See an overview of the administrators",
     "usersPanel": {
         "title": "Users",
         "loggedUsers": "At least once",
