style: changing the wording of tooltip messages

--- a/public/locales/en/common.json
+++ b/public/locales/en/common.json
@@ -22,9 +22,9 @@
     "partners": "Partners",
     "administrators": "Administrators",
     "tooltip": {
-        "administrator": "Users with access to the administration console of this instance",
-        "collaborator": "Internal users with the right to create rooms and invite users into them",
-        "partner": "External users who have been invited to one or more rooms by an internal user and have limited rights",
+        "administrator": "Users with access to all Watcha features, including this administration console. They cannot, however, access rooms in which they are not a member.",
+        "collaborator": "Users have the right to create rooms and invite existing users or new partners to them; they do not have access to other rooms. These are usually employees of your organization.",
+        "partner": "Users only have access to the rooms for which they have been invited; they do not have access to the member directory unless they are promoted to room administrator. These are usually guests from outside your organization.",
         "pendingInvitation": "Users who have been invited, but have not yet set their password or logged in"
     }
 }
