--- a/public/locales/fr/common.json
+++ b/public/locales/fr/common.json
@@ -39,9 +39,9 @@
     "partners": "Partenaires",
     "administrators": "Administrateurs",
     "tooltip": {
-        "administrator": "Utilisateurs ayant accès à la console d'administration de l'instance",
-        "collaborator": "Utilisateurs internes ayant le droit de créer des salons et d'inviter des utilisateurs dans ces derniers",
-        "partner": "Utilisateurs externes ayant été invités dans un ou plusieurs salons, par un utilisateur interne et ayant des droits limités",
+        "administrator": "Utilisateurs ayant accès à toutes les fonctionnalités de Watcha, dont cette console d'administration. Ils ne peuvent néanmoins pas accéder aux salons dont ils ne sont pas membre.",
+        "collaborator": "Utilisateurs ayant le droit de créer des salons et d'y inviter des utilisateurs existants, ou de nouveaux partenaires ; ils n'ont pas accès aux autres salons. Il s'agit habituellement des employés de votre organisation.",
+        "partner": "Utilisateurs n'ayant accès qu'aux salons pour lesquels ils ont été invités ; ils n'ont pas accès au répertoire des membres, sauf s'ils sont promus administrateurs d'un salon. Il s'agit habituellement des invités externes à votre organisation.",
         "pendingInvitation": "Utilisateurs ayant été invités, mais n'ayant pas encore défini leur mot de passe, ni s'étant encore connecté"
     }
 }
