--- a/public/locales/en/dashboardTab.json
+++ b/public/locales/en/dashboardTab.json
@@ -17,7 +17,7 @@
         "nonDirectRoomsCount": "New or active rooms",
         "directRoomsCount": "New or active one-to-one conversations",
         "administrateButton": "Administrate rooms",
-        "noRoomsMessage": "<strong>This Watcha instance does not have any rooms yet.<br/>Return to Watcha to create a first room (button \"+\").</strong>."
+        "noRoomsMessage": "<strong>This Watcha instance does not have any rooms yet.<br/>You can create one in the Rooms tab.</strong>"
     },
     "applicationPanel": {
         "title": "Application",
