--- a/public/locales/fr/dashboardTab.json
+++ b/public/locales/fr/dashboardTab.json
@@ -17,7 +17,7 @@
         "nonDirectRoomsCount": "Conversations a plusieurs nouvelles ou actives",
         "directRoomsCount": "Conversations privées nouvelles ou actives",
         "administrateButton": "Administrer les salons",
-        "noRoomsMessage": "<strong>Cette installation de Watcha n'a encore aucun salon.<br/>Retournez sur Watcha  pour creer un premier Salon (bouton \"+\").</strong>"
+        "noRoomsMessage": "<strong>Cette installation de Watcha ne possède aucun salon.<br/>Vous pouvez en créer un dans l'onglet \"Salons\", via le bouton \"Nouveau salon\".</strong>"
     },
     "applicationPanel": {
         "title": "Application",
