--- a/public/locales/fr/dashboardTab.json
+++ b/public/locales/fr/dashboardTab.json
@@ -14,8 +14,8 @@
     },
     "roomsPanel": {
         "title": "Salons",
-        "nonDirectRoomsCount": "Conversations a plusieurs nouvelles ou actives",
-        "directRoomsCount": "Conversations privées nouvelles ou actives",
+        "nonDirectRoomsCount": "Conversations a plusieurs, nouvelles et/ou actives",
+        "directRoomsCount": "Conversations privées, nouvelles et/ou actives",
         "administrateButton": "Administrer les salons",
         "noRoomsMessage": "<strong>Cette installation de Watcha ne possède aucun salon.<br/>Vous pouvez en créer un dans l'onglet \"Salons\", via le bouton \"Nouveau salon\".</strong>"
     },
