refactor: UserAccountStatusHeader into HeaderTooltip

--- a/public/locales/en/usersTab.json
+++ b/public/locales/en/usersTab.json
@@ -24,7 +24,7 @@
         "role": "Role",
         "status": "Status"
     },
-    "statusHelp": {
+    "StatusHeaderTooltip": {
         "title": "Account status",
         "content": {
             "active": "<strong>Active</strong>: the user can log in to Watcha.",
