style: better wording for room status

--- a/public/locales/en/roomsTab.json
+++ b/public/locales/en/roomsTab.json
@@ -10,8 +10,8 @@
         "status": "Status"
     },
     "status": {
-        "active": "enabled",
-        "inactive": "disabled",
+        "active": "active",
+        "inactive": "inactive",
         "new": "new"
     },
     "permalink": {
