feat: addition of HeaderTooltip on room 'Status' header

--- a/public/locales/fr/roomsTab.json
+++ b/public/locales/fr/roomsTab.json
@@ -18,5 +18,13 @@
         "alt": "Permalien",
         "enabled": "Ouvrir ce salon dans un nouvel onglet",
         "disabled": "Vous n'êtes pas membre de ce salon"
+    },
+    "StatusHeaderTooltip": {
+        "title": "Statut du salon",
+        "content": {
+            "active": "<strong>Actif</strong> : le dernier message reçu dans le salon date de moins d'une semaine.",
+            "inactive": "<strong>Inactif</strong> : le dernier message reçu dans le salon date de plus d'une semaine.",
+            "new": "<strong>Nouveau</strong> : le salon a été crée il y a moins d'une semaine."
+        }
     }
 }
