--- a/public/locales/en/roomsTab.json
+++ b/public/locales/en/roomsTab.json
@@ -18,5 +18,13 @@
         "alt": "Permalink",
         "enabled": "Open this room in a new tab",
         "disabled": "You are not a member of this room"
+    },
+    "StatusHeaderTooltip": {
+        "title": "Room status",
+        "content": {
+            "active": "<strong>Active</strong> : the last message received in the room was less than a week ago.",
+            "inactive": "<strong>Inactive</strong> : the last message received in the living room was more than a week ago.",
+            "new": "<strong>New</strong> : the room was created less than a week ago."
+        }
     }
 }
