--- a/public/locales/en/roomsTab.json
+++ b/public/locales/en/roomsTab.json
@@ -14,6 +14,10 @@
         "inactive": "inactive",
         "new": "new"
     },
+    "type":{
+        "personnal": "private",
+        "multiple": "multiple"
+    },
     "permalink": {
         "alt": "Permalink",
         "enabled": "Open this room in a new tab",
