--- a/public/locales/en/common.json
+++ b/public/locales/en/common.json
@@ -25,6 +25,6 @@
         "administrator": "Users with access to all Watcha features, including this administration console. They cannot, however, access rooms in which they are not a member.",
         "collaborator": "Users have the right to create rooms and invite existing users or new partners to them; they do not have access to other rooms. These are usually employees of your organization.",
         "partner": "Users only have access to the rooms for which they have been invited; they do not have access to the member directory unless they are promoted to room administrator. These are usually guests from outside your organization.",
-        "pendingInvitation": "Users who have been invited, but have not yet set their password or logged in"
+        "pendingInvitation": "Users who have not yet finalized the registration procedure sent by email. This step, in which they set their password, is necessary in order to use Watcha."
     }
 }
